Add Ai, and api

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^16.4.7",
     "expo": "~52.0.38",
     "expo-auth-session": "~6.0.3",
+    "expo-barcode-scanner": "^13.0.1",
     "expo-blur": "~14.0.3",
     "expo-camera": "~16.0.18",
     "expo-constants": "~17.0.8",
@@ -37,6 +38,7 @@
     "expo-system-ui": "~4.0.8",
     "expo-web-browser": "~14.0.2",
     "firebase": "^11.4.0",
+    "lodash.debounce": "^4.0.8",
     "lucide-react-native": "^0.480.0",
     "openai": "^4.87.4",
     "react": "18.3.1",
